доработал блок с отзывами

--- a/FirstProject/index.html
+++ b/FirstProject/index.html
@@ -55,12 +55,12 @@
 					<div class="col-xl-4 offset-xl-2 col-lg-5 offset-lg-0 col-md-8 offset-md-2">
 						<div class="main-form">
 							<h2 class="main-form-header">Для рассчета точной стоимости закажите<br><strong>выезд замерщика</strong></h2>
-							<form action="#">
+							<form class="form" action="#">
 								<label for="#">Ваше имя</label>
-								<input class="main-form-input" type="text">
+								<input class="form-input" type="text">
 								<label for="#">Номер телефона</label>
-								<input class="main-form-input" type="text">
-								<button class="main-form-btn button" type="submit">оставьте заявку</button>
+								<input class="form-input" type="text">
+								<button class="form-btn button" type="submit">оставьте заявку</button>
 								<small>Приедем в день обращения*</small>
 							</form>
 						</div>
@@ -183,6 +183,135 @@
 			</div>
 		</div>
 	</section>
+	<!-- Отзывы -->
+	<section class="feadback">
+		<div class="container">
+			<div class="section-header">
+				<h2>Отзывы</h2>
+
+				<div class="feadback-slider">
+					<div class="feadback-slider_item">
+						<div class="row">
+							<div class="col-lg-6">
+								<div class="fotorama" data-nav="thumbs">
+									<img src="img/feadback/photo/1.jpg" alt="">
+									<img src="img/feadback/photo/2.jpg" alt="">
+									<img src="img/feadback/photo/3.jpg" alt="">
+									<img src="img/feadback/photo/4.jpg" alt="">
+									<img src="img/feadback/photo/5.jpg" alt="">
+									<img src="img/feadback/photo/6.jpg" alt="">
+								</div>
+							</div>
+							<div class="col-lg-6">
+								<p>Объект: г.Москва, Нахимовский проспект д.10</p>
+								<p>Площадь: <strong>357 м2</strong></p>
+								<p>Выполнен <strong>за: 10 дней</strong></p>
+								<p>Стоимость: <strong>550 рублей за квадратный метр</strong></p>
+								<p>Особенности: <strong>перепады неровности стен достигали до 6 см</strong></p>
+								<div class="media">
+
+								  <img class="mr-3" src="img/feadback/avatar.png" alt="Заказчик">
+								  <div class="media-body">
+								    <span>Заказчик</span>
+								    <h4 class="media-heading">Нахимов Артем</h4>
+								  </div>
+								</div>
+
+								<p class="feadback-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Эта большой сбить, журчит строчка.</p>
+
+							</div>
+						</div>
+					</div>
+					<div class="feadback-slider_item">
+						<div class="row">
+							<div class="col-lg-6">
+								<div class="fotorama" data-nav="thumbs">
+									<img src="img/feadback/photo/1.jpg" alt="">
+									<img src="img/feadback/photo/2.jpg" alt="">
+									<img src="img/feadback/photo/3.jpg" alt="">
+									<img src="img/feadback/photo/4.jpg" alt="">
+									<img src="img/feadback/photo/5.jpg" alt="">
+									<img src="img/feadback/photo/6.jpg" alt="">
+								</div>
+							</div>
+							<div class="col-lg-6">
+								<p>Объект: г.Москва, Нахимовский проспект д.10</p>
+								<p>Площадь: <strong>357 м2</strong></p>
+								<p>Выполнен <strong>за: 10 дней</strong></p>
+								<p>Стоимость: <strong>550 рублей за квадратный метр</strong></p>
+								<p>Особенности: <strong>перепады неровности стен достигали до 6 см</strong></p>
+
+								<div class="media">
+								  <img class="mr-3" src="img/feadback/avatar.png" alt="Заказчик">
+								  <div class="media-body">
+								    <span>Заказчик</span>
+								    <h4 class="media-heading">Нахимов Артем</h4>
+								  </div>
+								</div>
+
+								<p class="feadback-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Эта большой сбить, журчит строчка.</p>
+							</div>
+						</div>
+					</div>
+					<div class="feadback-slider_item">
+						<div class="row">
+							<div class="col-lg-6">
+								<div class="fotorama" data-nav="thumbs">
+									<img src="img/feadback/photo/1.jpg" alt="">
+									<img src="img/feadback/photo/2.jpg" alt="">
+									<img src="img/feadback/photo/3.jpg" alt="">
+									<img src="img/feadback/photo/4.jpg" alt="">
+									<img src="img/feadback/photo/5.jpg" alt="">
+									<img src="img/feadback/photo/6.jpg" alt="">
+								</div>
+							</div>
+							<div class="col-lg-6">
+								<p>Объект: г.Москва, Нахимовский проспект д.10</p>
+								<p>Площадь: <strong>357 м2</strong></p>
+								<p>Выполнен <strong>за: 10 дней</strong></p>
+								<p>Стоимость: <strong>550 рублей за квадратный метр</strong></p>
+								<p>Особенности: <strong>перепады неровности стен достигали до 6 см</strong></p>
+
+								<div class="media">
+								  <img class="mr-3" src="img/feadback/avatar.png" alt="Заказчик">
+								  <div class="media-body">
+								    <span>Заказчик</span>
+								    <h4 class="media-heading">Нахимов Артем</h4>
+								  </div>
+								</div>
+								<p class="feadback-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Эта большой сбить, журчит строчка.</p>
+
+							</div>
+						</div>
+					</div>
+				</div> <!-- feadback-slider -->
+				<div class="row">
+					<div class="col-lg-8 offset-lg-2">
+						<div class="feadback-form">
+							<h3>Хотите также? Оставьте Ваши контактные данные</h3>
+
+								<div class="row">
+									<div class="col-lg-6">
+										<form action="#" class="form">
+										<label for="#">Ваше имя</label>
+										<input class="form-input" type="text">
+										</form>
+									</div>
+									<div class="col-lg-6">
+										<form action="#" class="form">
+										<label for="#">Номер телефона</label>
+										<input class="form-input" type="text">
+										</form>
+									</div>
+								</div> <!-- row -->
+								<button class="form-btn feadback-btn button" type="submit">оставьте заявку</button>
+						</div> <!-- feadback-form -->
+					</div> <!-- col-lg-8 -->
+				</div>
+			</div>
+		</div> <!-- container -->
+		<img class="hand" src="img/feadback/feadback-hand.png" alt="hand">
+	</section>
 
 
 
@@ -196,15 +325,15 @@
 				<button class="popup-close">&times;</button>
 				<h4 class="popup-header">Заинтересовало?</h4>
 				<p>Оставьте контактные данные для связи</p>
-				<div class="main-form popup-form">
+				<div class="form popup-form">
 					<form action="#">
 						<label for="#">Ваше имя</label>
-						<input class="main-form-input" type="text">
+						<input class="form-input" type="text">
 						<label for="#">Номер телефона</label>
-						<input class="main-form-input" type="text">
+						<input class="form-input" type="text">
 						<label for="#">Сообщение</label>
-						<textarea class="main-form-input" rows="5"></textarea>
-						<button class="main-form-btn button" type="submit">оставьте заявку</button>
+						<textarea class="form-input" rows="5"></textarea>
+						<button class="form-btn button" type="submit">оставьте заявку</button>
 						<small>Приедем в день обращения*</small>
 					</form>
 				</div>
@@ -224,7 +353,11 @@
   <!-- Подключение библиотеки slick-slider -->
   <script src="slick/slick.min.js"></script>
 
-  <!-- Инициализируем слайдер -->
+  <!-- fotorama.css & fotorama.js. -->
+  <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
+
+
   <script>
   	$(document).ready(function() {
   		$('.popup-btn').on("click", function() {
@@ -236,6 +369,15 @@
   			$('.popup').fadeOut();
   		});
   	});
+
+  	/* Слайдер с отзывами */
+  	$(".feadback-slider").slick({
+  		prevArrow: '<button type="button" class="feadback-slider-btn feadback-prev-btn"><img src="img/feadback/prevArrow.svg" alt="prevArrow"></button>',
+  		nextArrow: '<button type="button" class="feadback-slider-btn feadback-next-btn"><img src="img/feadback/nextArrow.svg" alt="nextnextArrow"></button>'
+
+  	});
+
+  	/* Слайдер с преимуществами */
   	$(document).ready(function(){
   		$(".features-slider").slick({
     		infinite: true,
