--- a/electra/index.html
+++ b/electra/index.html
@@ -1,1 +1,105 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Elektra</title>
+    <link rel="stylesheet" href="./css/main.css">
+</head>
+<body>
+    <header class="header">
+        <div class="container container_fluid">
+            <div class="header-row">
+                <div class="logo">
+                    <img src="./img/logo.png" width="404" height="152" alt="flash and elektra" class="logo__img">
+                    <img src="./img/logo.png" width="404" height="152" alt="flash and elektra" class="logo__img_hovered">
+                </div>
+                <button type="button" class="header__btn">
+                    <span class="hovered">Coming Soon</span>
+                    <span class="static">Launch app</span>
+                </button>
+            </div>
+        </div>
+    </header>
+    <section class="firstscreen">
+        <div class="spot"></div>
+        <div class="spot"></div>
+        <div class="spot"></div>
+        <div class="container">
+            <div class="firstscreen-row">
+                <h1 class="firstscreen__title">We make <span class="gradient">NFT</span> bridging simple</h1>
+            </div>
+        </div>
+    </section>
+    <main class="main">
+        <div class="container">
+            <div class="main-sections">
+                <section class="main-sections__item section-item">
+                    <div class="section-item__text">
+                        <h2 class="section-item__header"><span class="gradient">About Elektra</span></h2>
+                        <p class="section-item__desc">Elektra is a fully composable NFT cross chain bridging protocol which enables the seamless transfer of value across different blockchains.</p>
+                        <p class="section-item__desc_darken">We aim to create an NFT primitive that removes the tribal chain dependancy currently seen in the market and work towards building an omnichain future.</p>
+                    </div>
+                </section>
+                <section class="main-sections__item section-item section-item_picture">
+                    <div class="section-item__text">
+                        <h2 class="section-item__header section-item__header_bordered"><span>Use Cases</span></h2>
+                        <p class="section-item__desc smaller">Elektra will enable users to take advantage of liquidity wherever it is and enable the transition of NFTs to be used in DeFi based applications such as lending markets and DEXs.</p>
+                        <p class="section-item__desc_darken smaller">We believe the biggest use cases of our bridge is bringing interoperability in the following categories: gaming, lending, cross chain trading and general transfer of value.</p>
+                    </div>
+                    <div class="section-item__picture">
+                        <img src="./img/planet.png" width="869" height="611" alt="planet" loading="lazy">
+                        <div class="spot"></div>
+                    </div>
+                </section>
+                <section class="main-sections__item section-item section-item_picture invert">
+                    <div class="section-item__text">
+                        <h2 class="section-item__header section-item__header_bordered">
+                            <span>DAO</span>
+                        </h2>
+                        <p class="section-item__desc smaller">Elektra aims to become a DAO governed by the community, EKA will play a central role in voting, incentivising early users and bootstrapping the network.</p>
+                        <p class="section-item__desc_darken smaller">Stakers of EKA receive 100% of the protocol revenue. EKA liquidity providers will be able to lock their LP tokens to earn rewards.</p>
+                    </div>
+                    <div class="section-item__picture">
+                        <img src="./img/shield.png" width="657" height="841" alt="shield" loading="lazy">
+                    </div>
+                </section>
+                <section class="main-sections__item section-item section-item_picture">
+                    <div class="section-item__text">
+                        <h2 class="section-item__header"><span class="gradient">Come for the memes, stay for the protocol</span></h2>
+                        <p class="section-item__desc">While NFT bridging is fun, follow us on Twitter for funny memes and alpha from the community</p>
+                        <div class="spot"></div>
+                    </div>
+                    <div class="section-item__picture">
+                        <img src="./img/people.png" width="1368" height="987" alt="people" loading="lazy">
+                    </div>
+                </section>
+            </div>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="container container_fluid">
+            <div class="footer-row">
+                <div class="logo">
+                    <img src="./img/logo.png" alt="flash and elektra" class="logo__img">
+                    <img src="./img/logo.png" alt="flash and elektra" class="logo__img_hovered">
+                </div>
+                <p class="footer__copy">ⓒ 2022 Elektra. All rights reserved</p>
+                <ul class="footer__socials footer-socials">
+                    <li class="footer-socials__item socials-item">
+                        <a href="#" class="socials-item__link" target="_blank" aria-label="our twitter">
+                            <img src="./img/ic-twitter.svg" width="31" height="25" alt="twitter">
+                        </a>
+                    </li>
+                    <li class="footer-socials__item socials-item">
+                        <a href="#" class="socials-item__link" target="_blank" aria-label="our telegram">
+                            <img src="./img/ic-telegram.svg" width="27" height="23" alt="telegram">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
